# haskell-abstract-algeba-practice

./: CHANGELOG.md  README.md  abstract-algeba.cabal
app/: 10_function.hs  11_binary-operation.hs  11_binary-operation_1.hs  12_binary-operation_2.hs  13_binary-operation_3.hs  14_semi-groub_1.hs  15_semi-groub_2.hs  16_monoid_1.hs  18_group_1.hs  19_group_2.hs  1_DefinitionOfSet.hs  24_extra_1.hs  2_Subset.hs  3_TranscendentalNumber.hs  4_Cardinality.hs  5_Cartesian_1.hs  5_Cartesian_2.hs  6_Cartesian_2.hs  7_mapping_1.hs  8_mapping_2.hs  Main.hs  Subset.hs
