cabal-version:      2.4
name:               abstract-algeba
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ratimon
maintainer:         ratixoxo@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable definition-of-set
    main-is:          1_DefinitionOfSet.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable sub-set
    main-is:          2_Subset.hs
    build-depends:    base ^>=4.16.4.0 , containers ^>=0.6.5.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable transcendental-number
    main-is:          3_TranscendentalNumber.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable cardinality
    main-is:          4_Cardinality.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable cartesian_1
    main-is:          5_Cartesian_1.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable cartesian_2
    main-is:          6_Cartesian_2.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable mapping_1
    main-is:          7_mapping_1.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable mapping_2
    main-is:          8_mapping_2.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable function
    main-is:          10_function.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable binary-operation
    main-is:          11_binary-operation.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable binary-operation_2
    main-is:          12_binary-operation_2.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010